--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -30,6 +30,9 @@ shadow_port = 54320
 # server_version;` on the remote database to check.
 major_version = 15
 
+[postgres]
+image = "supabase/postgres:17.01.010-orioleb"
+
 [db.pooler]
 enabled = false
 # Port to use for the local connection pooler.
