--- a/.github/workflows/update-types.yml
+++ b/.github/workflows/update-types.yml
@@ -10,7 +10,8 @@ jobs:
     permissions:
       contents: write
     env:
-      SUPABASE_PROJECT_REF: ${{ secrets.SUPABASE_PROJECT_REF }}
+      SUPABASE_PROJECT_REF: ${{ secrets.SUPABASE_PROJECT_REF }},
+      SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }},
     steps:
       - uses: actions/checkout@v4
         with:
