--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next/env": "^15.1.2",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.11",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
@@ -31,10 +32,12 @@
     "fast-xml-parser": "^4.5.1",
     "lucide-react": "^0.469.0",
     "next": "15.1.2",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^1.0.0",
     "rss-parser": "^3.13.0",
     "tailwind-merge": "^2.6.0",
