--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^1.0.12",
+    "@google/genai": "^0.13.0",
     "@hookform/resolvers": "^3.9.1",
     "@next/env": "^15.1.2",
     "@radix-ui/react-avatar": "^1.1.2",
