--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-config-next": "15.1.2",
     "eslint-config-prettier": "^9.1.0",
     "postcss": "^8",
+    "shadcn": "^3.5.2",
     "supabase": "^2.1.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
